--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,12 @@
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  background-color: var(--sky-honey);
 }
 
 .app__main {
   flex: 1;
   min-height: calc(100vh - 200px);
+  background-color: var(--sky-honey);
 }
 
